--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+*{
+    box-sizing: border-box;
+}
+#container{
+    min-width:350px;
+}
 body{
     background-image: url(images/bg-mobile.png);
     background-size:cover;
@@ -24,6 +30,11 @@ body{
     background-color: #0C122C;
    padding:9px;
    border-radius:10px;
+   cursor: pointer;
+}
+#fileimg img:hover{
+    transform:translateY(-5px);
+    transition: all 0.5s ease;
 }
 #sec2{
     border-radius: 10px;
@@ -90,13 +101,17 @@ body{
      margin-top: 90px;
  }
  @media(min-width:1100px){
+    #container{
+        max-width:1800px;
+    }
     body{
         text-align: center;
         background-image: url(images/bg-desktop.png);
         background-size: contain;
-        background-position:0 300px;
+        background-position:center bottom;
         background-repeat: no-repeat;
         background-color: rgba(12, 18, 44, 1);
+        
     }
     .sec{
         display:inline-block;
@@ -104,7 +119,7 @@ body{
         
     }
     #sec1{
-        width:15%;
+        width:30%;
         margin-top: 15%;
         margin-right:30px;
         box-shadow: 0px 75px 100px -30px rgba(0, 0, 0, 0.24776);
